# Chat-Memory-Graph

./: .gitignore
backend/: .env.example  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 34ff97aaf8e1_initial_schema_with_lico_graph.py
backend/scripts/: create_migration.py  setup_db.py
backend/src/app/: main.py
backend/src/app/api/: routes_chat.py
backend/src/app/conversation/: __init__.py  conversation_store.py  db_conversation_store.py  memory_store.py  models.py
backend/src/app/core/: config.py  conversation_store.py  database.py  db_conversation_store.py  init_db.py  llm_client.py  logging_utils.py  memory_service.py
backend/src/app/db/: __init__.py  init_db.py  session.py
backend/src/app/llm/: __init__.py  base_client.py  chat_client.py  errors.py  factory.py  memory_client.py  messages.py
backend/src/app/memory/: __init__.py  chunking.py  entities.py  pipeline.py  session_summary.py  triples.py
backend/src/app/models/: chat.py  database_models.py
backend/tests/: test_chat_api.py
frontend/: memory_nodes.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  GraphView.css  GraphView.tsx  SessionsSidebar.tsx  TopNavigation.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
